# streval

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: examples.md  getting_started.md  index.md  reference.md
examples/: index.html
examples/invoice/: ground_truth.json  source_doc.md
examples/invoice/predictions/: all_incorrect.json  extra_items.json  half_correct.json  incorrect.json  missing_items.json
getting_started/: index.html
reference/: index.html
src/streval/: __init__.py  evaluators.py
stylesheets/: extra.css
tests/: conftest.py  test.ipynb  test_evaluators.py  test_invoice.py
tests/files/invoice/: ground_truth_2.json  schema.py  source_doc.md
tests/files/invoice/predictions/: all_correct.json  all_incorrect_gt2.json  extra_items_gt1.json
tests/files/nested/: ground_truth.json  prediction.json
