[project]
name = "streval"
version = "0.1.0"
description = "Tool for evaluating structured outputs"
readme = "README.md"
authors = [
    { name = "ruankie" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
