[project]
name = "streval"
version = "0.2.1"
description = "Tool for evaluating structured outputs"
readme = "README.md"
authors = [
    { name = "ruankie" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ruankie/streval"
Documentation = "https://ruankie.github.io/streval/"
Repository = "https://github.com/ruankie/streval"
Issues = "https://github.com/ruankie/streval/issues"